# djnagosnippet

./: Pipfile  README.md  pyproject.toml
djangosnippets/: .gitignore  db.sqlite3
djangosnippets/accounts/: tests.py  urls.py  views.py
djangosnippets/accounts/templates/accounts/: login.html
djangosnippets/djangosnippets/: settings.py  urls.py
djangosnippets/snippets/: forms.py  models.py  tests.py  urls.py  views.py
djangosnippets/snippets/migrations/: 0001_initial.py  0002_snippet_lang.py  0003_alter_snippet_lang.py  0004_alter_snippet_table_comment.py  0005_alter_comment_created_by_alter_comment_to_and_more.py  0006_tag_snippet_tags.py  0007_alter_snippet_tags.py  0008_remove_snippet_tags_delete_tag.py  0009_snippet_tags.py  0010_alter_snippet_tags.py  0011_alter_snippet_tags.py  0012_alter_snippet_tags.py
djangosnippets/snippets/static/snippets/css/: style.css
djangosnippets/snippets/templates/snippets/: mypage.html  snippet_detail.html  snippet_edit.html  snippet_form.html  snippet_new.html  snippets_filtered_by_tag.html  table.html  top.html
djangosnippets/templates/: base.html
